Update senolytic-eye-drops date to 2026-02-19

--- a/content/posts/senolytic-eye-drops-vision-rescue.mdx
+++ b/content/posts/senolytic-eye-drops-vision-rescue.mdx
@@ -1,7 +1,7 @@
 ---
 title: "FDA Approves Age-Reversing Eye Drops (Using Nobel Prize Technology)"
 description: "Life Biosciences' ER-100 uses Yamanaka factors to treat glaucoma and vision loss"
-date: "2026-02-18"
+date: "2026-02-19"
 category: "Clinical Trial"
 featured: false
 author: "Longevity Leak Research Team"
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study ](https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/)
+[Read Full Study →](https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/)
